--- a/css/style.css
+++ b/css/style.css
@@ -3,5 +3,70 @@
     --blue: #18A0CA;
     --red: #B82333; 
     --yellow: #E3C739;
+    --white: #fff;
 }
 
+body{
+    font-family: "Protest Riot", serif;
+}
+
+.navbar-color{
+    background-color: var(--yellow);
+}
+
+.font-style{
+    color: #18A0CA;
+    font-size: large;
+}
+
+.after-style:hover {
+    color: var(--white);
+}
+
+.footer-style{
+    background-color: var(--red); 
+    padding: 1rem;
+    color: var(--white);
+}
+
+.footer-icon{
+    height: 30px;
+    filter: invert(57%) sepia(90%) saturate(350%) hue-rotate(150deg);
+}
+
+.nav-icon{
+    height: 30px;
+}
+
+.footer-icon:hover {
+    filter: invert(100%) brightness(1000%);
+}
+
+.nav-icon:hover {
+    filter: invert(100%) brightness(1000%);
+}
+
+.header-style{
+    position: relative; 
+    color: #000; 
+    height: 16rem; 
+    overflow: hidden;
+}
+
+.img-position {
+    object-fit: cover; /* Asegura que la imagen cubra todo el contenedor sin deformarse */
+    object-position: center top; /* Mueve la imagen. Aquí está centrado horizontalmente y en la parte superior */
+}
+
+
+.text-style{
+    position: absolute; 
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%);
+    color: var(--white);
+}
+
+.img-size{
+    height: 5em;
+}
