--- a/css/style-blog.css
+++ b/css/style-blog.css
@@ -37,7 +37,7 @@
 }
 
 .color-text-date{
-    color: var(--yellow);
+    color: var(--white);
 }
 
 @media (min-width: 320px) and (max-width: 767.98px) {
